parser/tests/bad/const03.st
% re-assignment on subscript of constant reference

var arr: array 1..2 of int
const constArr := arr
constArr[1] := 0
